Refactor to work with DynAssetGen 1.0.0