@@ -1,12 +1,12 @@
 package io.github.lukebemish.excavated_variants;
 
-import io.github.lukebemish.dynamic_asset_generator.client.api.DynAssetGeneratorClientAPI;
-import io.github.lukebemish.excavated_variants.client.BlockStateAssembler;
+import com.mojang.datafixers.util.Pair;
+import io.github.lukebemish.dynamic_asset_generator.api.client.AssetResourceCache;
+import io.github.lukebemish.excavated_variants.client.TextureRegistrar;
 import io.github.lukebemish.excavated_variants.data.BaseOre;
 import io.github.lukebemish.excavated_variants.data.BaseStone;
 import io.github.lukebemish.excavated_variants.data.ModData;
 import io.github.lukebemish.excavated_variants.platform.Services;
-import io.github.lukebemish.excavated_variants.util.Pair;
 import net.minecraft.resources.ResourceLocation;
 
 import java.util.*;
@@ -28,24 +28,25 @@ public class ExcavatedVariantsClient {
             }
         }
 
-        Map<String, Pair<BaseOre,BaseStone>> extractorMap = ExcavatedVariants.oreStoneList.stream().flatMap(p->p.last().stream().map(
-                stone -> new Pair<>(stone.id+"_"+p.first().id, new Pair<>(p.first(), stoneMap.get(p.first().stone.get(0)))))).collect(Collectors.toMap(
-                        Pair::first, Pair::last
+        Map<String, Pair<BaseOre,BaseStone>> extractorMap = ExcavatedVariants.oreStoneList.stream().flatMap(p->p.getSecond().stream().map(
+                stone -> new Pair<>(stone.id+"_"+p.getFirst().id, new Pair<>(p.getFirst(), stoneMap.get(p.getFirst().stone.get(0)))))).collect(Collectors.toMap(
+                        Pair::getFirst, Pair::getSecond
         ));
         List<Pair<BaseOre,BaseStone>> toMake = new ArrayList<>();
 
         for (Pair<BaseOre, HashSet<BaseStone>> p : ExcavatedVariants.oreStoneList) {
-            var ore = p.first();
-            for (BaseStone stone : p.last()) {
+            var ore = p.getFirst();
+            for (BaseStone stone : p.getSecond()) {
                 String fullId = stone.id+"_"+ore.id;
                 toMake.add(new Pair<>(ore,stone));
-                DynAssetGeneratorClientAPI.planLoadingStream(new ResourceLocation(ExcavatedVariants.MOD_ID, "models/item/" + fullId + ".json"),
-                        JsonHelper.getItemModel(fullId));
+                AssetResourceCache.INSTANCE.planSource(new ResourceLocation(ExcavatedVariants.MOD_ID, "models/item/" + fullId + ".json"),
+                        rl->JsonHelper.getItemModel(fullId));
                 langBuilder.add(fullId, stone, ore);
             }
         }
 
-        DynAssetGeneratorClientAPI.planLoadingStream(new ResourceLocation(ExcavatedVariants.MOD_ID, "lang/en_us.json"),langBuilder.build());
-        BlockStateAssembler.setupClientAssets(extractorMap.values(),toMake);
+        AssetResourceCache.INSTANCE.planSource(new ResourceLocation(ExcavatedVariants.MOD_ID, "lang/en_us.json"),rl->langBuilder.build());
+
+        AssetResourceCache.INSTANCE.planSource(new TextureRegistrar(extractorMap.values(), toMake));
     }
 }
